using external scss lib

--- a/projects/starter-lib/src/lib/styles/app/_colors.scss
+++ b/projects/starter-lib/src/lib/styles/app/_colors.scss
@@ -1,9 +1,11 @@
 $ma-selector: #a6a6a6;
 $ma-border: #353535;
+$error: red;
 
 
 :root {
  --selector: #{$ma-selector};
  --border: #{$ma-border};
  --primary-color: #3B82F6;
+ --error: #{$error};
 }
