--- a/projects/starter-lib/src/lib/styles/app/_layout.scss
+++ b/projects/starter-lib/src/lib/styles/app/_layout.scss
@@ -175,16 +175,18 @@ p-scrollpanel {
   }
 
   .custombar2 {
+      color: var(--error);
+
       .p-scrollpanel-wrapper {
           border-right: 9px solid var(--layer-1);
           border-bottom: 9px solid var(--layer-1);
       }
 
       .p-scrollpanel-bar {
-          background-color: var(--layer-2);
+          background-color: black;
           border-radius: 0;
           opacity: 1;
           transition: background-color .2s;
-      }
+        }
   }
 }
