--- a/projects/skeleton/src/app/demo/forms/forms.component.html
+++ b/projects/skeleton/src/app/demo/forms/forms.component.html
@@ -1,3 +1,31 @@
 <content-layout>
-	<p>forms works!</p>
+	<legend>Job Portal</legend>
+	<div class="row">
+		<div class="col col-md-8" style="overflow-y: scroll; max-height: 100vh">
+			<form [formGroup]="jobForm" (ngSubmit)="save()">
+				<div class="mb-3">
+					<label for="firstName" class="form-label">First Name</label>
+					<input
+						type="text"
+						class="form-control"
+						id="firstName"
+						formControlName="firstName"
+					/>
+				</div>
+				<div class="mb-3">
+					<label for="lastName" class="form-label">Last Name</label>
+					<input
+						type="text"
+						class="form-control"
+						id="lastName"
+						formControlName="lastName"
+					/>
+				</div>
+				<button type="submit" class="btn btn-primary">Submit</button>
+			</form>
+		</div>
+		<div class="col col-md-4">
+			<div style="position: fixed">{{ preview }}</div>
+		</div>
+	</div>
 </content-layout>
