new buttonbox for demo

--- a/projects/skeleton/src/app/demo/observes/observes.component.html
+++ b/projects/skeleton/src/app/demo/observes/observes.component.html
@@ -1,3 +1,4 @@
 <content-layout>
-	<p>observes works!</p>
+	<p>{{ msg }}</p>
+	<app-buttonbox (onSave)="save()" (onCancel)="cancel()"></app-buttonbox>
 </content-layout>
