--- a/projects/starter-lib/src/lib/components/scroller/scroller.component.scss
+++ b/projects/starter-lib/src/lib/components/scroller/scroller.component.scss
@@ -1,3 +1,4 @@
+/*
 .scroll-container {
 	height: 100px;
 	width: 100px;
@@ -14,3 +15,22 @@
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	border-radius: 10px;
 }
+*/
+
+/*
+:host {
+	overflow: auto;
+	display: block;
+}
+
+:host::-webkit-scrollbar {
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+:host::-webkit-scrollbar-thumb {
+	background-color: #0973b1;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	border-radius: 10px;
+}
+*/
