--- a/projects/starter-lib/src/lib/styles/app/_layout.scss
+++ b/projects/starter-lib/src/lib/styles/app/_layout.scss
@@ -238,8 +238,8 @@ p-scrollpanel {
 }
 
 .scroller {
-	height: 150px;
-	width: 200px;
+	height: calc(100% - 28px);
+	width: 100%;
 }
 
 .scroller::-webkit-scrollbar-thumb {
