--- a/projects/skeleton/src/app/demo/scrolling/scrolling.component.html
+++ b/projects/skeleton/src/app/demo/scrolling/scrolling.component.html
@@ -1,7 +1,7 @@
-<content-layout>
-	<lib-scroller class="scroller">
-		<p *ngFor="let number of numbers">
-			({{ number }}): Bla Blub Mega genialer Text. Lorem ospek sorum clorum
-		</p>
-	</lib-scroller>
-</content-layout>
+<!-- <content-layout> -->
+<lib-scroller class="scroller">
+	<p *ngFor="let number of numbers">
+		({{ number }}): Bla Blub Mega genialer Text. Lorem ospek sorum clorum
+	</p>
+</lib-scroller>
+<!-- </content-layout> -->
