--- a/projects/starter-lib/src/lib/styles/app/_layout.scss
+++ b/projects/starter-lib/src/lib/styles/app/_layout.scss
@@ -242,6 +242,11 @@ p-scrollpanel {
 	width: 100%;
 }
 
+.demo-scroller {
+	height: calc(100% - 120px);
+	width: 100%;
+}
+
 .scroller::-webkit-scrollbar-thumb {
 	background-color: red;
 }
