--- a/projects/skeleton/src/app/demo/easy-component-loader/easy-component-loader.component.html
+++ b/projects/skeleton/src/app/demo/easy-component-loader/easy-component-loader.component.html
@@ -1,5 +1,5 @@
 <h1>Load Component</h1>
 <ng-template adHost></ng-template>
 
-<h2>div</h2>
+<h2>Loader with Component as Parameter</h2>
 <ng-template [adComponent]="myComponent"></ng-template>
