--- a/projects/skeleton/src/app/demo/easy-component-loader/easy-component-loader.component.html
+++ b/projects/skeleton/src/app/demo/easy-component-loader/easy-component-loader.component.html
@@ -2,4 +2,6 @@
 <ng-template adHost></ng-template>
 
 <h2>Loader with Component as Parameter</h2>
-<ng-template [adComponent]="myComponent"></ng-template>
+<ng-template [adComponent]="myComponent" [useMap]="false"></ng-template>
+<div></div>
+<ng-template adComponent="HelloWorld"></ng-template>
