--- a/projects/skeleton/src/app/demo/easy-component-loader/easy-component-loader.component.html
+++ b/projects/skeleton/src/app/demo/easy-component-loader/easy-component-loader.component.html
@@ -1,7 +1,17 @@
-<h1>Load Component</h1>
-<ng-template adHost></ng-template>
+<lib-scroller class="form-scroller">
+	<h1>Load Component</h1>
+	<ng-template adHost></ng-template>
 
-<h2>Loader with Component as Parameter</h2>
-<ng-template [adComponent]="myComponent" [useMap]="false"></ng-template>
-<div></div>
-<ng-template adComponent="HelloWorld"></ng-template>
+	<h2>Loader with Component as Parameter</h2>
+	<ng-template [adComponent]="myComponent" [useMap]="false"></ng-template>
+	<div></div>
+	<ng-template adComponent="HelloWorld"></ng-template>
+	<form [formGroup]="testForm">
+		<app-input-text [data]="inputData"></app-input-text>
+	</form>
+	<div>test: {{ testForm.controls["test"].value }}</div>
+
+	<app-button-container>
+		<p-button label="checkForm" (onClick)="checkForm()"></p-button>
+	</app-button-container>
+</lib-scroller>
