--- a/projects/skeleton/src/app/demo/scrolling/scrolling.component.html
+++ b/projects/skeleton/src/app/demo/scrolling/scrolling.component.html
@@ -1,5 +1,5 @@
 <!-- <content-layout> -->
-<lib-scroller class="scroller">
+<lib-scroller class="demo-scroller">
 	<p *ngFor="let number of numbers">
 		({{ number }}): Bla Blub Mega genialer Text. Lorem ospek sorum clorum
 	</p>
