--- a/projects/skeleton/src/app/concept/inject-function/inject-function.component.html
+++ b/projects/skeleton/src/app/concept/inject-function/inject-function.component.html
@@ -1,1 +1,10 @@
-<p>inject-function works!</p>
+<div>
+	<h2>Injecting template</h2>
+</div>
+<div>
+	<ng-container
+		[ngTemplateOutlet]="template"
+		[ngTemplateOutletContext]="{ model: dataModel }"
+	>
+	</ng-container>
+</div>
