--- a/projects/starter-lib/src/lib/styles/app/_layout.scss
+++ b/projects/starter-lib/src/lib/styles/app/_layout.scss
@@ -270,3 +270,9 @@ lib-scroller::-webkit-scrollbar-thumb {
 	border-radius: 10px;
 }
 
+.welcome {
+	color: blue;
+	background-color: #676767;
+	font-size: 20px;
+}
+
